# ha-discord-bridge

./: .env.example  .gitignore  LICENSE  README.md  hacs.json  openapi.yaml  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: configuration.yaml
config/custom_components/: discord_chat_bridge
custom_components/: __init__.py
custom_components/discord_chat_bridge/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discord_api.py  discovery.py  entity.py  gateway.py  manifest.json  notify.py  sensor.py  services.yaml  strings.json  switch.py  text.py
custom_components/discord_chat_bridge/translations/: en.json
docs/: architecture.md  chatgpt_actions.md  manual_validation.md
scripts/: run_local.sh
tests/components/discord_chat_bridge/: test_api.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_discord_api.py  test_discovery.py  test_entity.py  test_gateway.py  test_init.py  test_message_state.py  test_sensor.py  test_switch.py
