[project]
name = "ha-discord-bridge"
version = "0.1.0"
description = "Home Assistant custom integration for Discord channel access"
requires-python = ">=3.14"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
